[gd_scene load_steps=6 format=3 uid="uid://cmgr105r1aynw"]

[ext_resource type="Script" uid="uid://dnewjk33x0d0u" path="res://scripts/menu/MenuController.gd" id="1_l6cm7"]
[ext_resource type="AudioStream" uid="uid://cjur5kpp1i4ih" path="res://assets/audio/IntroLoop.ogg" id="3_1ajci"]
[ext_resource type="PackedScene" uid="uid://bomy1jbd4lktn" path="res://scenes/kitchen.tscn" id="4_wu84c"]
[ext_resource type="Script" uid="uid://cw2e4m48nn4tk" path="res://scripts/menu/MenuCamera.gd" id="6_5dd4i"]

[sub_resource type="LabelSettings" id="LabelSettings_1ajci"]
font_size = 32

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_l6cm7")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.21
anchor_bottom = 1.0
offset_right = 2.07999
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.145
offset_right = -0.999985
offset_bottom = 0.0399933
text = "Bake or Break"
label_settings = SubResource("LabelSettings_1ajci")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonList" type="VBoxContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.153
anchor_right = 0.963
anchor_bottom = 0.83
offset_left = 5.12
offset_top = -0.144005
offset_right = 0.0279846
offset_bottom = 0.159973

[node name="Play" type="Button" parent="UI/Control/ButtonList"]
layout_mode = 2
text = "PLAY"

[node name="Tutorial" type="Button" parent="UI/Control/ButtonList"]
layout_mode = 2
text = "TUTORIAL"

[node name="Settings" type="Button" parent="UI/Control/ButtonList"]
layout_mode = 2
text = "SETTINGS"

[node name="Credits" type="Button" parent="UI/Control/ButtonList"]
layout_mode = 2
text = "CREDITS"

[node name="Quit" type="Button" parent="UI/Control/ButtonList"]
layout_mode = 2
text = "QUIT"

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62517, 0.743813)
script = ExtResource("6_5dd4i")
target = NodePath("../RotationPoint")

[node name="RotationPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62517, 0.743813)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1ajci")
autoplay = true

[node name="Kitchen" parent="." instance=ExtResource("4_wu84c")]

[connection signal="pressed" from="UI/Control/ButtonList/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="UI/Control/ButtonList/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="UI/Control/ButtonList/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="UI/Control/ButtonList/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="UI/Control/ButtonList/Quit" to="." method="_on_quit_pressed"]
